--- a/敏捷开发/《敏捷开发》的核心与实战价值/《敏捷开发》的核心与实战价值.md
+++ b/敏捷开发/《敏捷开发》的核心与实战价值/《敏捷开发》的核心与实战价值.md
@@ -3,7 +3,7 @@
 
 郭庆峰 2023.02
 
-![img.png](img.png)
+![img.png](imgdir/img.png)
 
 
 一、为什么要选择敏捷？
@@ -24,16 +24,16 @@
 
 「根据《Scrum中文网—2021敏捷年度状态报告》来看，组织实践敏捷的领域在不断扩张，数据显示敏捷应用在软件开发和IT以外如运营、市场、人力资源、销售/销售运营这几个领域加起来已经达到30%。 」
 
-![img_1.png](img_1.png)
+![img_1.png](imgdir/img_1.png)
 
 「95%调查者回应他们的组织已经开始了敏捷实践方法，当然也有82%的调查者表示，他们公司内并不是所有团队都采用敏捷实践，这说明企业级敏捷转型仍有较大的增长空间。」
 
-![img_2.png](img_2.png)
+![img_2.png](imgdir/img_2.png)
 
 「敏捷开发的起源，及其在中国软件行业的发展历程」
 
 「2001年2月，17位软件工程领军人物，在在美国犹他州滑雪胜地，共同探寻更好的解决问题方案，最终成立了一个无政府组织，推出了《敏捷软件开发宣言》（Manifesto for Agile Software Development）。参会者们包括来自于极限编程、Scrum、DSDM、自适应软件开发、水晶系列、特征驱动开发、实效编程的代表们，还包括了希望找到文档驱动、重型软件开发过程的替代品的一些推动者」
-![img_3.png](img_3.png)
+![img_3.png](imgdir/img_3.png)
 
 「在2006年时，对中国软件行业而言，敏捷开发是太过超前了。」
 在第十届国际软件博览会上，做了关于敏捷方法的主题演讲，台下报以的是困惑的眼神与尴尬的沉默。每两周一次迭代、每次迭代发布上线给用户使用，既不可能、也不必要。中国的IT业还没有做好迎接敏捷的准备。
@@ -52,14 +52,14 @@
 
 二、敏捷开发的运作模式
 「瀑布模型是一个经典的软件生命周期模型,也叫预测型生命周期、完全计划驱动型生命周期，遵循项目管理学科中的“五大过程组、十大知识领域”」
-![img_4.png](img_4.png)
-![img_5.png](img_5.png)
+![img_4.png](imgdir/img_4.png)
+![img_5.png](imgdir/img_5.png)
 
 
 「下面这个图片是来自《硝烟中的Scrum和XP》一书，作者Henrik Kniberg通过与瀑布模式的对比形象生动地描述了敏捷开发的理念与实践。」
-![img_6.png](img_6.png)
+![img_6.png](imgdir/img_6.png)
 
-![img_7.png](img_7.png)
+![img_7.png](imgdir/img_7.png)
 
 
 「每日站会开始之前首先要确认今日站会所需要的三个问题：」
@@ -71,13 +71,13 @@
 2、不解决任何问题！
 3、不允许团队成员外的人干预会议（但可以旁听）！
 
-![img_8.png](img_8.png)
-![img_9.png](img_9.png)
+![img_8.png](imgdir/img_8.png)
+![img_9.png](imgdir/img_9.png)
 「每日站会与看板工具」
 
-![img_10.png](img_10.png)
+![img_10.png](imgdir/img_10.png)
 
-![img_11.png](img_11.png)
+![img_11.png](imgdir/img_11.png)
 
 
 
@@ -87,12 +87,12 @@
 三、什么是敏捷开发？
 
 「敏捷宣言」
-![img_12.png](img_12.png)
+![img_12.png](imgdir/img_12.png)
 
 「敏捷十二原则」
-![img_13.png](img_13.png)
+![img_13.png](imgdir/img_13.png)
 
-![img_14.png](img_14.png)
+![img_14.png](imgdir/img_14.png)
 
 「敏捷开发的“3355”」
 3 敏捷的三个角色  - sm（scurm master） po（product owner） dev team（开发团队“一个Pizza原则”）
@@ -106,21 +106,21 @@
 承诺- 愿意对目标做出承诺，全身心投入去完成Scrum团队的目标，而不是必须按计划完成，两者之间是有区别的
 
 
-![img_15.png](img_15.png)
+![img_15.png](imgdir/img_15.png)
 
-![img_16.png](img_16.png)
+![img_16.png](imgdir/img_16.png)
 
-![img_17.png](img_17.png)
+![img_17.png](imgdir/img_17.png)
 
-![img_18.png](img_18.png)
+![img_18.png](imgdir/img_18.png)
 
-![img_19.png](img_19.png)
+![img_19.png](imgdir/img_19.png)
 
-![img_20.png](img_20.png)
+![img_20.png](imgdir/img_20.png)
 
-![img_21.png](img_21.png)
+![img_21.png](imgdir/img_21.png)
 
-![img_22.png](img_22.png)
+![img_22.png](imgdir/img_22.png)
 
 四、思考题：如何选择适用的项目管理？
 「？？思考：给房子装修应该敏捷吗🤔？」
@@ -141,21 +141,21 @@ D.都可以
 
 五、敏捷项目管理的工具介绍
 「如何编写用户故事」
-![img_23.png](img_23.png)
+![img_23.png](imgdir/img_23.png)
 
 「看板工具，
 演示链接：https://www.leangoo.com/kanban/board/go/4627766#/board_view」
 国内流行的看板工具：领歌-leangoo、腾讯-tapd、禅道、PingCode、华为软开云、复临-ones、
-![img_24.png](img_24.png)
+![img_24.png](imgdir/img_24.png)
 
 「看板工具-燃尽图」
-![img_25.png](img_25.png)
+![img_25.png](imgdir/img_25.png)
 
 
 「每日站会、回顾会议、Sprint/迭代计划会议、Sprint/迭代评审、短迭代成为Top5的敏捷管理实践。-《Scrum中文网—2021敏捷年度状态报告》」
 
 
-![img_26.png](img_26.png)
+![img_26.png](imgdir/img_26.png)
 
 
 
@@ -163,16 +163,16 @@ D.都可以
 DevOps 是 Development 和 Operations 的合成词，其目标是要加强开发人员、测试人员、运维人员之间的沟通协调。如何实现这一目标呢？需要我们的项目做到持续集成、持续交付、持续部署。
 时下流行的 Jenkins、Bamboo，就是两款优秀的持续集成工具。而 Docker 容器则为 DevOps 提供了强大而有效的统一环境。
 
-![img_27.png](img_27.png)
-![img_28.png](img_28.png)
+![img_27.png](imgdir/img_27.png)
+![img_28.png](imgdir/img_28.png)
 七、敏捷的网站、机构、工具、书籍、考试途径等；
 1、敏捷网站：
 1.1 scrum中文网：https://www.scrumcn.com/agile/scrum-knowledge-library/scrum.html
 
-![img_29.png](img_29.png)
+![img_29.png](imgdir/img_29.png)
 
-![img_30.png](img_30.png)
-![img_31.png](img_31.png)
+![img_30.png](imgdir/img_30.png)
+![img_31.png](imgdir/img_31.png)
 2、工具
 2.1 《框架》-scrum、devops、看板（流程化敏捷）、短迭代、FDD、XP等等。
 2.2 《看板》-leangoo、tapd
