--- a/敏捷开发/《敏捷开发》的核心与实战价值/《敏捷开发》的核心与实战价值.md
+++ b/敏捷开发/《敏捷开发》的核心与实战价值/《敏捷开发》的核心与实战价值.md
@@ -1,11 +1,11 @@
-《敏捷开发》的核心与实战价值
-持续、频繁、灵活、快速的项目管理方法论下的价值交付
+# 《敏捷开发》的核心与实战价值
+## 持续、频繁、灵活、快速的项目管理方法论下的价值交付
 
-郭庆峰 2023.02
+### 郭庆峰 2023.02
 
 ![img.png](imgdir/img.png)
 
-
+```
 一、为什么要选择敏捷？
 二、敏捷开发的运作模式
 三、什么是敏捷开发？
@@ -13,10 +13,10 @@
 五、看板工具介绍
 六、敏捷与devops
 七、分享敏捷的网站、工具、书籍、考试途径、心得体会等；
+```
 
 
-
-一、为什要选择敏捷？
+# 一、为什要选择敏捷？
 「《敏捷开发》是一种《项目管理》的方式/手段」。
 「价值产出、拥抱变化」
 价值产出：资源花在刀刃上。
@@ -50,7 +50,7 @@
 「敏捷为什么就能做到拥抱变化、价值产出呢？它是怎么运作的呢？」
 
 
-二、敏捷开发的运作模式
+# 二、敏捷开发的运作模式
 「瀑布模型是一个经典的软件生命周期模型,也叫预测型生命周期、完全计划驱动型生命周期，遵循项目管理学科中的“五大过程组、十大知识领域”」
 ![img_4.png](imgdir/img_4.png)
 ![img_5.png](imgdir/img_5.png)
@@ -84,7 +84,7 @@
 
 「我如何判断我当下的事情是否“敏捷”呢？」
 
-三、什么是敏捷开发？
+# 三、什么是敏捷开发？
 
 「敏捷宣言」
 ![img_12.png](imgdir/img_12.png)
@@ -93,7 +93,7 @@
 ![img_13.png](imgdir/img_13.png)
 
 ![img_14.png](imgdir/img_14.png)
-
+```
 「敏捷开发的“3355”」
 3 敏捷的三个角色  - sm（scurm master） po（product owner） dev team（开发团队“一个Pizza原则”）
 3 个工件 - 产品代办清单、迭代代办清单、潜在可发布产品增量
@@ -104,7 +104,7 @@
 勇气- 有勇气做出承诺，履行承诺，接受别人的尊重
 专注- 把你的心思和能力都用到你承诺的工作上去
 承诺- 愿意对目标做出承诺，全身心投入去完成Scrum团队的目标，而不是必须按计划完成，两者之间是有区别的
-
+```
 
 ![img_15.png](imgdir/img_15.png)
 
@@ -122,24 +122,25 @@
 
 ![img_22.png](imgdir/img_22.png)
 
-四、思考题：如何选择适用的项目管理？
+# 四、思考题：如何选择适用的项目管理？
+```
 「？？思考：给房子装修应该敏捷吗🤔？」
+
 A.敏捷
+
 B.瀑布型（预测型）
+
 C.混合型   
+
 D.都可以
 
+```
 
-
-
-
-
-
-
+```
 「敏捷只是一种方法，不是解决所有项目管理问题的终点。」
+```
 
-
-五、敏捷项目管理的工具介绍
+# 五、敏捷项目管理的工具介绍
 「如何编写用户故事」
 ![img_23.png](imgdir/img_23.png)
 
@@ -159,30 +160,33 @@ D.都可以
 
 
 
-六、精益与敏捷-DevOps
+# 六、精益与敏捷-DevOps
 DevOps 是 Development 和 Operations 的合成词，其目标是要加强开发人员、测试人员、运维人员之间的沟通协调。如何实现这一目标呢？需要我们的项目做到持续集成、持续交付、持续部署。
 时下流行的 Jenkins、Bamboo，就是两款优秀的持续集成工具。而 Docker 容器则为 DevOps 提供了强大而有效的统一环境。
 
 ![img_27.png](imgdir/img_27.png)
 ![img_28.png](imgdir/img_28.png)
-七、敏捷的网站、机构、工具、书籍、考试途径等；
-1、敏捷网站：
-1.1 scrum中文网：https://www.scrumcn.com/agile/scrum-knowledge-library/scrum.html
+
+# 七、敏捷的网站、机构、工具、书籍、考试途径等；
+## 1、敏捷网站：
+### 1.1 scrum中文网：https://www.scrumcn.com/agile/scrum-knowledge-library/scrum.html
 
 ![img_29.png](imgdir/img_29.png)
 
 ![img_30.png](imgdir/img_30.png)
 ![img_31.png](imgdir/img_31.png)
-2、工具
-2.1 《框架》-scrum、devops、看板（流程化敏捷）、短迭代、FDD、XP等等。
-2.2 《看板》-leangoo、tapd
+
+## 2、工具
+### 2.1 《框架》-scrum、devops、看板（流程化敏捷）、短迭代、FDD、XP等等。
+### 2.2 《看板》-leangoo、tapd
 
 专业认证
 《PMP》《软考》《ACP》
 PMI-ACP（PMI敏捷项目管理专业人士）考试是由项目管理协会(PMI®)于2011年推出一门敏捷项目管理的考试， PMI-ACP证书是PMI在全球206个国家和地区范围内，发起的针对敏捷实践者的资格认证。该认证是目前国际上敏捷领域，知识方法内容全面、含金量高、认可度广的证书。PMI-ACP证书特别验证了从业者在项目工作中理解及实施敏捷管理原则与实践的能力。
 
-
+```
 参考文献：
+
 1、《硝烟中的Scrum和XP》一书，作者Henrik Kniberg
 2、《疫情之下2021敏捷年度状态报告十大看点》，Scrum中文网，https://blog.csdn.net/leangoo/article/details/121682766
 3、《敏捷在中国这十五年》-Thoughtworks商业洞见，知乎，https://zhuanlan.zhihu.com/p/35832896
@@ -191,7 +195,7 @@ PMI-ACP（PMI敏捷项目管理专业人士）考试是由项目管理协会(PMI
 《日拱一卒，大厂都在推崇的敏捷开发究竟是人还是工具至上？》作者：王若林，36氪企服点评，https://baijiahao.baidu.com/s?id=1710121904861385773&wfr=spider&for=pc
 《Google、IBM等一线大厂都在用的敏捷开发到底是什么？丨极客时间》，InfoQ，有内容的技术社区媒体，https://www.163.com/dy/article/F29Q8JP70511D3QS.html
 《揭秘：Scrum Master 的一天是怎样的体验？》， Scrum中文网，Aka，https://www.scrumcn.com/agile/scrum/26066.html
-
+```
 
 
 
